# sot-collision

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/: sot-collision.hh  sot_collision.hh~
include/sot-collision/sotcollision/: collision-model.hh  sot-collision.hh  sot-collision.hh~
mesh/capsule/: capsule.blend  capsule.dae  capsule.rm
src/: CMakeLists.txt  CMakeLists.txt~  collision_model.cpp  collision_test.hh  collision_test.hh~  commands.hh  commands.hh~  demo.py~  sot-collision.cc  sot-collision.cc~  sot-collission.cc~  time
src/sot-collision/: demo.py  demo.py~  demo_pr2.py  demo_youbot.py  rospy  ur.py  ur.py~
